exports[`Modal component render Modal component with callback 1`] = `
<div
  className="modal">
  <div
    className="modal-content">
    <div
      className="modal-header">
      <h4>
        Hey a modal title
      </h4>
    </div>
    <div
      className="modal-body">
      <p>
        This is the modal body text
      </p>
    </div>
    <div
      className="modal-footer">
      <button
        onClick={[Function]}>
        Accept
      </button>
      <button
        onClick={[Function]}>
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal component render Modal component without crashing 1`] = `
<div
  className="modal">
  <div
    className="modal-content">
    <div
      className="modal-header">
      <h4>
        Hey a modal title
      </h4>
    </div>
    <div
      className="modal-body">
      <p>
        This is the modal body text
      </p>
    </div>
    <div
      className="modal-footer">
      <button
        onClick={[Function]}>
        Close
      </button>
    </div>
  </div>
</div>
`;
